--- a/src/connector/Cargo.toml
+++ b/src/connector/Cargo.toml
@@ -34,6 +34,7 @@ paste = "1"
 prost = "0.10"
 protobuf = "2"
 pulsar = { git = "https://github.com/shanicky/pulsar-rs.git", rev = "3b6353943833057f4379a354c1754a4e86fa57ff", default-features = false, features = ["tokio-runtime"] }
+rand = "0.8"
 rdkafka = { version = "0.28", features = ["cmake-build"] }
 risingwave_common = { path = "../common" }
 risingwave_pb = { path = "../prost" }
